--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="begin_button_text">Tap here to speak</string>
     <string name="speech_button_description">Speech button: hold down to speak</string>
-    <string name="scene">Scene</string>
+    <string name="intro">Scene 1: Introduction</string>
     <string name="confirm_user_input">Confirms user input from text box</string>
     <string name="user_text_input">Text box for secondary input</string>
 </resources>
